--- a/WingMate_iOS/View Controllers/Questionnaires/QuestionnairesVC.xib
+++ b/WingMate_iOS/View Controllers/Questionnaires/QuestionnairesVC.xib
@@ -25,13 +25,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select one of the below options." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hl4-63-ExC">
-                    <rect key="frame" x="20" y="202" width="202" height="15.333333333333343"/>
+                    <rect key="frame" x="20" y="132" width="202" height="15.333333333333343"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                     <color key="textColor" name="Label Gray Text Color"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We know age is just a number?" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9R-db-1Ri">
-                    <rect key="frame" x="20" y="112" width="374" height="70"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9R-db-1Ri">
+                    <rect key="frame" x="20" y="112" width="374" height="0.0"/>
                     <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                     <color key="textColor" name="Purple Theme Color"/>
                     <nil key="highlightedColor"/>
@@ -66,7 +66,7 @@
                     <rect key="frame" x="20" y="20" width="72" height="72"/>
                 </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="xq0-pP-sMs">
-                    <rect key="frame" x="20" y="249.33333333333334" width="374" height="368.66666666666663"/>
+                    <rect key="frame" x="20" y="179.33333333333334" width="374" height="438.66666666666663"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="wdL-ej-Sxs"/>
