--- a/WingMate_iOS/View Controllers/Terms And Conditions/TermsAndConditionsVC.xib
+++ b/WingMate_iOS/View Controllers/Terms And Conditions/TermsAndConditionsVC.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,48 +20,91 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IBL-Qd-LjY">
-                    <rect key="frame" x="157" y="438" width="100" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="IoB-GC-puS"/>
-                    </constraints>
-                    <state key="normal" title="Agree"/>
-                    <connections>
-                        <action selector="agreeButtonPressed:" destination="-1" eventType="touchUpInside" id="FsP-RH-UNF"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQM-n7-vcJ">
-                    <rect key="frame" x="157" y="468" width="100" height="100"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="NW2-hI-yat"/>
-                        <constraint firstAttribute="height" constant="100" id="O8D-lL-ySs"/>
-                    </constraints>
-                    <state key="normal" title="Don't Agree"/>
-                    <connections>
-                        <action selector="dontAgreeButtonPressed:" destination="-1" eventType="touchUpInside" id="XUN-d7-VTC"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms and Conditions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xiO-Si-fvb">
-                    <rect key="frame" x="124" y="52" width="166" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="I63-nJ-F7p">
+                    <rect key="frame" x="20" y="64" width="72" height="72"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms &amp; Conditions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuh-qp-ShF">
+                    <rect key="frame" x="20" y="156" width="262" height="35"/>
+                    <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hox-Pk-ctC">
+                    <rect key="frame" x="20" y="211" width="374" height="573"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.  Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.  Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.  Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                    <color key="textColor" systemColor="labelColor"/>
+                    <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="13"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8r8-qh-6gY">
+                    <rect key="frame" x="52" y="804" width="150" height="50"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="O1L-iJ-cMf"/>
+                        <constraint firstAttribute="width" constant="150" id="OWk-Dt-yD0"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                    <state key="normal" title="Disagree">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="dontAgreeButtonPressed:" destination="-1" eventType="touchUpInside" id="pDr-hq-6m9"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S4m-8K-Rph">
+                    <rect key="frame" x="212" y="804" width="150" height="50"/>
+                    <color key="backgroundColor" name="PurpleThemeColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="150" id="085-bd-pEo"/>
+                        <constraint firstAttribute="height" constant="50" id="7ho-ka-84g"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                    <state key="normal" title="Agree">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="agreeButtonPressed:" destination="-1" eventType="touchUpInside" id="ZUc-Tx-Z42"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="xiO-Si-fvb" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="2By-ti-oNh"/>
-                <constraint firstItem="xiO-Si-fvb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="A7b-66-y4c"/>
-                <constraint firstItem="IBL-Qd-LjY" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="B1E-1v-eRI"/>
-                <constraint firstItem="EQM-n7-vcJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="JgA-NP-7BD"/>
-                <constraint firstItem="IBL-Qd-LjY" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="KKh-QX-waB"/>
-                <constraint firstItem="EQM-n7-vcJ" firstAttribute="top" secondItem="IBL-Qd-LjY" secondAttribute="bottom" id="dya-VF-zAS"/>
+                <constraint firstItem="8r8-qh-6gY" firstAttribute="centerY" secondItem="S4m-8K-Rph" secondAttribute="centerY" id="Hcp-hR-uhF"/>
+                <constraint firstItem="I63-nJ-F7p" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="Inf-ne-nGg"/>
+                <constraint firstItem="S4m-8K-Rph" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="80" id="OMG-lg-iIS"/>
+                <constraint firstItem="xuh-qp-ShF" firstAttribute="top" secondItem="I63-nJ-F7p" secondAttribute="bottom" constant="20" id="QZm-fl-Fcd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Hox-Pk-ctC" secondAttribute="trailing" constant="20" id="V0h-dt-fYZ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="S4m-8K-Rph" secondAttribute="bottom" constant="8" id="a7N-uu-cgz"/>
+                <constraint firstItem="8r8-qh-6gY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="-80" id="crH-w7-Dex"/>
+                <constraint firstItem="Hox-Pk-ctC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="goK-lZ-dJ0"/>
+                <constraint firstItem="xuh-qp-ShF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="mTK-Xb-vcj"/>
+                <constraint firstItem="S4m-8K-Rph" firstAttribute="top" secondItem="Hox-Pk-ctC" secondAttribute="bottom" constant="20" id="qW9-uE-NaT"/>
+                <constraint firstItem="I63-nJ-F7p" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="wDD-K6-Lux"/>
+                <constraint firstItem="Hox-Pk-ctC" firstAttribute="top" secondItem="xuh-qp-ShF" secondAttribute="bottom" constant="20" id="wnP-Hh-r75"/>
             </constraints>
             <point key="canvasLocation" x="-84.057971014492765" y="72.991071428571431"/>
         </view>
     </objects>
     <resources>
+        <image name="login-heart" width="72" height="72"/>
+        <namedColor name="PurpleThemeColor">
+            <color red="0.28999999165534973" green="0.23899999260902405" blue="0.37599998712539673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
